src/opengrok-k8s-docker-desktop/k8s/opengrok.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opengrok
  namespace: opengrok
  labels:
    app: opengrok
spec:
  selector:
    matchLabels:
      app: opengrok
  replicas: 1
  minReadySeconds: 15
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: opengrok
    spec:
      containers:
      - name: opengrok
        image: opengrok
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        - containerPort: 5000
        volumeMounts:
        - name: opengrok-src
          mountPath: /opengrok/src
        - name: opengrok-data
          mountPath: /opengrok/data
        - name: opengrok-etc
          mountPath: /opengrok/etc
        - name: opengrok-read-only-config
          mountPath: /var/opengrok/etc
          readOnly: true
          subPath: "read-only-config.xml"
        - name: tomcat-server-config
          mountPath: "/usr/local/tomcat/conf/server.xml"
          subPath: "server.xml"
          readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: opengrok-src
        persistentVolumeClaim:
          claimName: opengrok-src-pvc
      - name: opengrok-data
        persistentVolumeClaim:
          claimName: opengrok-data-pvc
      - name: opengrok-read-only-config
        configMap:
          name: opengrok-config
          items:
          - key: "read-only-config.xml"
            path: "read-only-config.xml"
      - name: tomcat-server-config
        configMap:
          name: opengrok-config
          items:
          - key: "server.xml"
            path: "server.xml"
  volumeClaimTemplates:
  - metadata:
      name: opengrok-etc
      labels:
        app: opengrok
    spec:
      storageClassName: "docker-desktop-dynamic"
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
---
