src/opengrok-k8s-docker-desktop/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengrok-ingress
  namespace: opengrok
  annotations:
    # Tuning for large codebases
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 100k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/client-header-buffer-size: 100k
    nginx.ingress.kubernetes.io/large-client-header-buffers: 4 100k
spec:
  ingressClassName: nginx
  rules:
  - host: opengrok.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opengrok
            port:
              name: web
      - path: /reindex
        pathType: Prefix
        backend:
          service:
            name: opengrok
            port:
              name: reindex
